fix(style): fix issue causing some dialogs to have a horizontal scroll bar

--- a/src/style/dialog.scss
+++ b/src/style/dialog.scss
@@ -9,7 +9,9 @@ dialog.application {
 
     form {
         height: 100%;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
+        padding: 0.1rem;
     }
 }
 
